--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "packages/*"
   ],
   "dependencies": {
-    "next": "^15.4.2-canary.16"
+    "@monaco-editor/react": "^4.7.0",
+    "lucide-react": "^0.534.0",
+    "next": "^15.4.2-canary.16",
+    "react-resizable-panels": "^3.0.4"
   }
 }
