--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "packages/*"
   ],
   "dependencies": {
+    "@clerk/nextjs": "^6.28.0",
     "@monaco-editor/react": "^4.7.0",
     "lucide-react": "^0.534.0",
     "next": "^15.4.2-canary.16",
